// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultichainBridgeQuoteCard should not render when there is a quote fetch error 1`] = `<div />`;

exports[`MultichainBridgeQuoteCard should not render when there is no quote 1`] = `<div />`;

exports[`MultichainBridgeQuoteCard should render a quote with MM fee 1`] = `
<div>
  <div
    class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-column mm-box--width-full"
  >
    <div
      class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
    >
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        >
          Rate
        </p>
        <p
          class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
          style="width: 32px;"
        >
          0:30
        </p>
        <div
          class="mm-box"
        >
          <div
            class="mm-box mm-box--display-flex"
          >
            <span
              class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-icon-alternative"
              style="mask-image: url('./images/icons/info.svg');"
            />
          </div>
        </div>
      </div>
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-1 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        >
          1 USDC = 0.999 USDC
        </p>
        <button
          aria-label="More quotes"
          class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-alternative mm-box--background-color-transparent mm-box--rounded-lg"
        >
          <span
            class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
            style="mask-image: url('./images/icons/arrow-right.svg');"
          />
        </button>
      </div>
    </div>
    <div
      class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
    >
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        >
          Network fee
        </p>
        <div
          class="mm-box"
        >
          <div
            class="mm-box mm-box--display-flex"
          >
            <span
              class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-icon-alternative"
              style="mask-image: url('./images/icons/info.svg');"
            />
          </div>
        </div>
      </div>
      <p
        class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        data-testid="network-fees"
      >
        $0.0002
      </p>
    </div>
    <div
      class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
    >
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        >
          Slippage
        </p>
        <div
          class="mm-box"
        >
          <div
            class="mm-box mm-box--display-flex"
          >
            <span
              class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-icon-alternative"
              style="mask-image: url('./images/icons/info.svg');"
            />
          </div>
        </div>
      </div>
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-1 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        >
          undefined%
        </p>
        <button
          aria-label="Edit slippage"
          class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-alternative mm-box--background-color-transparent mm-box--rounded-lg"
          data-testid="slippage-edit-button"
        >
          <span
            class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
            style="mask-image: url('./images/icons/edit.svg');"
          />
        </button>
      </div>
    </div>
    <div
      class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
    >
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        >
          Minimum received
        </p>
        <div
          class="mm-box"
        >
          <div
            class="mm-box mm-box--display-flex"
          >
            <span
              class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-icon-alternative"
              style="mask-image: url('./images/icons/info.svg');"
            />
          </div>
        </div>
      </div>
      <p
        class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        data-testid="minimum-received"
      >
        13.98 USDC
      </p>
    </div>
  </div>
  <div
    class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-1 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-center mm-box--align-items-center"
    data-testid="bridge-cta-info-text"
  >
    <p
      class="mm-box mm-text mm-text--body-xs mm-box--color-text-alternative"
    >
      Includes 0.875% MM fee. Approves token for bridge.
    </p>
    <div
      class="mm-box"
    >
      <div
        class="mm-box mm-box--display-flex"
      >
        <span
          class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-icon-alternative"
          style="mask-image: url('./images/icons/info.svg');"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`MultichainBridgeQuoteCard should render gas sponsored text when gasSponsored is true 1`] = `
<div>
  <div
    class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-column mm-box--width-full"
  >
    <div
      class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
    >
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        >
          Rate
        </p>
        <p
          class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
          style="width: 32px;"
        >
          0:30
        </p>
        <div
          class="mm-box"
        >
          <div
            class="mm-box mm-box--display-flex"
          >
            <span
              class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-icon-alternative"
              style="mask-image: url('./images/icons/info.svg');"
            />
          </div>
        </div>
      </div>
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-1 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        >
          1 USDC = 0.999 USDC
        </p>
        <button
          aria-label="More quotes"
          class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-alternative mm-box--background-color-transparent mm-box--rounded-lg"
        >
          <span
            class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
            style="mask-image: url('./images/icons/arrow-right.svg');"
          />
        </button>
      </div>
    </div>
    <div
      class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
    >
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        >
          Network fee
        </p>
        <div
          class="mm-box"
        >
          <div
            class="mm-box mm-box--display-flex"
          >
            <span
              class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-icon-alternative"
              style="mask-image: url('./images/icons/info.svg');"
            />
          </div>
        </div>
      </div>
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-1 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
        data-testid="network-fees-sponsored"
      >
        <div
          class="mm-box mm-tag mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-success-muted mm-box--rounded-sm"
        >
          <p
            class="text-success-default text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default"
          >
            Paid by MetaMask
          </p>
        </div>
      </div>
    </div>
    <div
      class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
    >
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        >
          Slippage
        </p>
        <div
          class="mm-box"
        >
          <div
            class="mm-box mm-box--display-flex"
          >
            <span
              class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-icon-alternative"
              style="mask-image: url('./images/icons/info.svg');"
            />
          </div>
        </div>
      </div>
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-1 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        >
          undefined%
        </p>
        <button
          aria-label="Edit slippage"
          class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-alternative mm-box--background-color-transparent mm-box--rounded-lg"
          data-testid="slippage-edit-button"
        >
          <span
            class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
            style="mask-image: url('./images/icons/edit.svg');"
          />
        </button>
      </div>
    </div>
    <div
      class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
    >
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        >
          Minimum received
        </p>
        <div
          class="mm-box"
        >
          <div
            class="mm-box mm-box--display-flex"
          >
            <span
              class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-icon-alternative"
              style="mask-image: url('./images/icons/info.svg');"
            />
          </div>
        </div>
      </div>
      <p
        class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        data-testid="minimum-received"
      >
        13.98 USDC
      </p>
    </div>
  </div>
  <div
    class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-1 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-center mm-box--align-items-center"
    data-testid="bridge-cta-info-text"
  >
    <p
      class="mm-box mm-text mm-text--body-xs mm-box--color-text-alternative"
    >
      Approves token for bridge.
    </p>
    <div
      class="mm-box"
    >
      <div
        class="mm-box mm-box--display-flex"
      >
        <span
          class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-icon-alternative"
          style="mask-image: url('./images/icons/info.svg');"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`MultichainBridgeQuoteCard should render price impact warnings: .06 1`] = `
<div
  class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-1 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
>
  <button
    aria-label="Read price impact warning details"
    class="inline-flex items-center justify-center p-0 h-6 w-6 rounded-lg bg-transparent hover:bg-hover active:bg-pressed text-warning-default"
    data-testid="price-impact-warning-button"
  >
    <svg
      class="inline-block w-5 h-5 text-inherit"
      fill="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 17q.424 0 .713-.287c.289-.288.287-.43.287-.713s-.096-.52-.287-.713S12.283 15 12 15s-.52.096-.712.287S11 15.717 11 16s.096.52.288.712.429.288.712.288m-1-4h2V7h-2zm1 9q-2.075 0-3.9-.787c-1.825-.788-2.275-1.238-3.175-2.138S3.313 17.117 2.788 15.9 2 13.383 2 12s.262-2.683.787-3.9 1.238-2.275 2.138-3.175S6.883 3.312 8.1 2.787 10.617 2 12 2s2.683.262 3.9.787 2.275 1.238 3.175 2.138 1.613 1.958 2.138 3.175S22 10.617 22 12s-.262 2.683-.787 3.9-1.238 2.275-2.138 3.175-1.958 1.613-3.175 2.138S13.383 22 12 22m0-2q3.35 0 5.675-2.325C20 15.35 20 14.233 20 12q0-3.35-2.325-5.675C15.35 4 14.233 4 12 4Q8.65 4 6.325 6.325C4 8.65 4 9.767 4 12q0 3.35 2.325 5.675C8.65 20 9.767 20 12 20"
      />
    </svg>
  </button>
  <p
    class="text-warning-default text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default"
  >
    6.0%
  </p>
</div>
`;

exports[`MultichainBridgeQuoteCard should render price impact warnings: .26 1`] = `
<div
  class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-1 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
>
  <button
    aria-label="Read price impact warning details"
    class="inline-flex items-center justify-center p-0 h-6 w-6 rounded-lg bg-transparent hover:bg-hover active:bg-pressed text-error-default"
    data-testid="price-impact-warning-button"
  >
    <svg
      class="inline-block w-5 h-5 text-inherit"
      fill="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M1 21 12 2l11 19zm3.45-2h15.1L12 6zM12 18q.424 0 .713-.287c.289-.288.287-.43.287-.713s-.096-.52-.287-.712S12.283 16 12 16s-.52.096-.712.288S11 16.717 11 17s.096.52.288.713.429.287.712.287m-1-3h2v-5h-2z"
      />
    </svg>
  </button>
  <p
    class="text-error-default text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default"
  >
    26%
  </p>
</div>
`;

exports[`MultichainBridgeQuoteCard should render the recommended quote (no MM fee) 1`] = `
<div>
  <div
    class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-column mm-box--width-full"
  >
    <div
      class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
    >
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        >
          Rate
        </p>
        <p
          class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
          style="width: 32px;"
        >
          0:30
        </p>
        <div
          class="mm-box"
        >
          <div
            class="mm-box mm-box--display-flex"
          >
            <span
              class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-icon-alternative"
              style="mask-image: url('./images/icons/info.svg');"
            />
          </div>
        </div>
      </div>
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-1 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        >
          1 USDC = 0.999 USDC
        </p>
        <button
          aria-label="More quotes"
          class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-alternative mm-box--background-color-transparent mm-box--rounded-lg"
        >
          <span
            class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
            style="mask-image: url('./images/icons/arrow-right.svg');"
          />
        </button>
      </div>
    </div>
    <div
      class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
    >
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        >
          Network fee
        </p>
        <div
          class="mm-box"
        >
          <div
            class="mm-box mm-box--display-flex"
          >
            <span
              class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-icon-alternative"
              style="mask-image: url('./images/icons/info.svg');"
            />
          </div>
        </div>
      </div>
      <p
        class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        data-testid="network-fees"
      >
        $0.0002
      </p>
    </div>
    <div
      class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
    >
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        >
          Slippage
        </p>
        <div
          class="mm-box"
        >
          <div
            class="mm-box mm-box--display-flex"
          >
            <span
              class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-icon-alternative"
              style="mask-image: url('./images/icons/info.svg');"
            />
          </div>
        </div>
      </div>
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-1 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        >
          undefined%
        </p>
        <button
          aria-label="Edit slippage"
          class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-alternative mm-box--background-color-transparent mm-box--rounded-lg"
          data-testid="slippage-edit-button"
        >
          <span
            class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
            style="mask-image: url('./images/icons/edit.svg');"
          />
        </button>
      </div>
    </div>
    <div
      class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
    >
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        >
          Minimum received
        </p>
        <div
          class="mm-box"
        >
          <div
            class="mm-box mm-box--display-flex"
          >
            <span
              class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-icon-alternative"
              style="mask-image: url('./images/icons/info.svg');"
            />
          </div>
        </div>
      </div>
      <p
        class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        data-testid="minimum-received"
      >
        13.98 USDC
      </p>
    </div>
  </div>
  <div
    class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-1 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-center mm-box--align-items-center"
    data-testid="bridge-cta-info-text"
  >
    <p
      class="mm-box mm-text mm-text--body-xs mm-box--color-text-alternative"
    >
      Approves token for bridge.
    </p>
    <div
      class="mm-box"
    >
      <div
        class="mm-box mm-box--display-flex"
      >
        <span
          class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-icon-alternative"
          style="mask-image: url('./images/icons/info.svg');"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`MultichainBridgeQuoteCard should render the recommended quote while loading new quotes 1`] = `
<div>
  <div
    class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-column mm-box--width-full"
  >
    <div
      class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
    >
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        >
          Rate
        </p>
        <p
          class="mm-box mm-text mm-text--body-sm mm-box--color-error-default"
          style="width: 32px;"
        >
          0:00
        </p>
        <div
          class="mm-box"
        >
          <div
            class="mm-box mm-box--display-flex"
          >
            <span
              class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-icon-alternative"
              style="mask-image: url('./images/icons/info.svg');"
            />
          </div>
        </div>
      </div>
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-1 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        >
          1 ETH = 2,444 USDC
        </p>
        <button
          aria-label="More quotes"
          class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-alternative mm-box--background-color-transparent mm-box--rounded-lg"
        >
          <span
            class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
            style="mask-image: url('./images/icons/arrow-right.svg');"
          />
        </button>
      </div>
    </div>
    <div
      class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
    >
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        >
          Network fee
        </p>
        <div
          class="mm-box"
        >
          <div
            class="mm-box mm-box--display-flex"
          >
            <span
              class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-icon-alternative"
              style="mask-image: url('./images/icons/info.svg');"
            />
          </div>
        </div>
      </div>
      <p
        class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        data-testid="network-fees"
      >
        $0.0003
      </p>
    </div>
    <div
      class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
    >
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        >
          Slippage
        </p>
        <div
          class="mm-box"
        >
          <div
            class="mm-box mm-box--display-flex"
          >
            <span
              class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-icon-alternative"
              style="mask-image: url('./images/icons/info.svg');"
            />
          </div>
        </div>
      </div>
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-1 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        >
          1%
        </p>
        <button
          aria-label="Edit slippage"
          class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-alternative mm-box--background-color-transparent mm-box--rounded-lg"
          data-testid="slippage-edit-button"
        >
          <span
            class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
            style="mask-image: url('./images/icons/edit.svg');"
          />
        </button>
      </div>
    </div>
    <div
      class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
    >
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <p
          class="text-alternative text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default"
        >
          Price impact
        </p>
        <div
          class="mm-box"
        >
          <div
            class="mm-box mm-box--display-flex"
          >
            <span
              class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-icon-alternative"
              style="mask-image: url('./images/icons/info.svg');"
            />
          </div>
        </div>
      </div>
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-1 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <p
          class="text-alternative text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default"
        >
          2.0%
        </p>
      </div>
    </div>
    <div
      class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
    >
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        >
          Minimum received
        </p>
        <div
          class="mm-box"
        >
          <div
            class="mm-box mm-box--display-flex"
          >
            <span
              class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-icon-alternative"
              style="mask-image: url('./images/icons/info.svg');"
            />
          </div>
        </div>
      </div>
      <p
        class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
        data-testid="minimum-received"
      >
        14.44 USDC
      </p>
    </div>
  </div>
</div>
`;
